--- a/JAMIA.sty
+++ b/JAMIA.sty
@@ -5,10 +5,10 @@
 \usepackage{titlesec}
 \setlength{\columnsep}{0.5cm}
 \usepackage{authblk}
-\usepackage{multicol}
 \usepackage{fancyhdr}
 \usepackage{sectsty}
 \usepackage[super,comma,sort&compress]{natbib}
+\usepackage{cuted}
 
 \newfontfamily\arialbold{Arial Bold}
 \newfontfamily\arial{Arial}
