--- a/JAMIA.sty
+++ b/JAMIA.sty
@@ -1,21 +1,56 @@
 \ProvidesPackage{JAMIA}
 \usepackage{fontspec}
-
 \usepackage[letterpaper, margin=2cm, top=2.54cm]{geometry}
 \usepackage{titlesec}
 \setlength{\columnsep}{0.5cm}
 \usepackage{authblk}
+\usepackage{multicol}
 \usepackage{fancyhdr}
 \usepackage{sectsty}
-\usepackage[super,comma,sort&compress]{natbib}
+\usepackage{setspace}
+\usepackage{color}
+\usepackage{multirow}
+\usepackage{graphicx}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage{etoolbox}
 \usepackage{cuted}
+\usepackage[super,comma,sort&compress]{natbib}
+\usepackage{booktabs}
+\usepackage{array, caption, threeparttable}
 
+%==============================
+% Caption
+\DeclareCaptionLabelSeparator{dot}{.\space}
+\usepackage[font=small, labelfont=bf, labelsep=dot,]{caption}
+\captionsetup[table]{
+    font=sf,
+    singlelinecheck=false,
+}
+\captionsetup[figure]{
+    font=sf,
+    singlelinecheck=false,
+}
+%==============================
+
+
+
+
+%==============================
+% Section, subsection, subsubsection
 \newfontfamily\arialbold{Arial Bold}
 \newfontfamily\arial{Arial}
 
 \allsectionsfont{\arialbold\fontsize{11}{13}\selectfont\MakeUppercase}
 \subsectionfont{\arial\fontsize{10}{12}\selectfont}
+\subsubsectionfont{\fontsize{9}{11}\selectfont}
+%==============================
 
+
+
+
+%==============================
+% Title
 \makeatletter
 \renewcommand{\maketitle}{
     \thispagestyle{empty}
@@ -31,8 +66,16 @@
     \end{flushleft}\egroup
 }
 \makeatother
+%==============================
 
+
+
+
+%==============================
 \pagestyle{empty} % disables page numbers
+
+
+
 
 %==============================
 % Header
@@ -43,6 +86,9 @@
 \fancyhead[EL]{\footnotesize\textsf{\textit{Journal of the American Medical Informatics Association,} 2024, Vol. xx, No. x}}
 \fancyhead[ER]{\textsf{\textbf{\thepage}}}
 %==============================
+
+
+
 
 %==============================
 % Abstract
@@ -61,6 +107,9 @@
     }
 }
 %==============================
+
+
+
 
 %==============================
 % Reference list option change
