fix header line

--- a/JAMIA.sty
+++ b/JAMIA.sty
@@ -72,7 +72,7 @@
     \else
         \textsf{\textbf{\thepage}}
 \fi}
-
+\renewcommand{\headrulewidth}{1pt}
 %==============================
 
 %==============================
