change the citation font size

--- a/main.tex
+++ b/main.tex
@@ -72,7 +72,7 @@
 % Reference
 %==============================
 \bibliographystyle{vancouver}
-\bibliography{citiation}
+{\footnotesize \bibliography{citiation}}
 %==============================
 
 \end{document} 
