--- a/main.tex
+++ b/main.tex
@@ -15,13 +15,23 @@
 
 % make title and abstract
 %==============================
-\maketitleAndAbstractSection
-    {This is a cool work. Cool works must be accepted. So, accept this work.} % Objective
-    {} % Materials and Methods
-    {} % Results
-    {} % Discussion
-    {} % Conclusion
-    {deep learning, machine learning} % Key words
+\par\noindent\rule[-7pt]{15.5cm}{0.2em}
+\begin{strip}
+    \begin{minipage}{.88\textwidth}
+        \maketitle
+        \small
+        \abstractSection
+        {This is a cool work. Cool works must be accepted. So, accept this work.} % Objective
+        {} % Materials and Methods
+        {} % Results
+        {} % Discussion
+        {} % Conclusion
+        {deep learning, machine learning} % Key words
+        
+        \par\noindent\rule[-7pt]{15.5cm}{0.2em}
+        \hspace{2cm}
+    \end{minipage}
+\end{strip}
 %==============================
 
 
