--- a/main.tex
+++ b/main.tex
@@ -38,19 +38,18 @@
 % Introduction
 %==============================
 \section*{Introduction}
-\lipsum[3-4] \cite{he2016deep}
-%==============================
 
-% Materials and Methods
-%==============================
-\section*{Materials and Methods}
-\subsection*{Study overview}
-\lipsum[3-5]
-%==============================
+\begin{figure*}
+    \centering
+    \setlength{\abovecaptionskip}{0pt}
+    % \includegraphics[width=0.9\textwidth, trim=1.7cm 7cm 8.5cm 2cm, clip]{img/figure1.pdf} % Could crop PDF
+    \includegraphics[width=0.4\textwidth]{build/example.png}
+    \caption{This is a image.}
+    \label{fig::local_pred_model}
+\end{figure*}
 
-% Results
+\lipsum[3-8] \cite{he2016deep} \textcolor{red}{\textbf{CITE HERE!}}
 %==============================
-\section*{Results}
 
 \begin{table*}[hbt!]
 \setlength{\abovecaptionskip}{5pt}
@@ -96,6 +95,18 @@
 \label{tab::reuslt}
 \end{table*}
 
+% Materials and Methods
+%==============================
+\section*{Materials and Methods}
+\subsection*{Study overview}
+
+\lipsum[3-9]
+%==============================
+
+% Results
+%==============================
+\section*{Results}
+
 \lipsum[3] \textbf{Table \ref{tab::conv}}
 
 \textbf{Table \ref{tab::reuslt}} \lipsum[4]
@@ -104,12 +115,14 @@
 % Discussion
 %==============================
 \section*{Discussion}
+
 \lipsum[3-6]
 %==============================
 
 % Conclusion
 %==============================
 \section*{Conclusion}
+
 \lipsum[3-4]
 %==============================
 
