--- a/main.tex
+++ b/main.tex
@@ -43,7 +43,7 @@
     \centering
     \setlength{\abovecaptionskip}{0pt}
     % \includegraphics[width=0.9\textwidth, trim=1.7cm 7cm 8.5cm 2cm, clip]{img/figure1.pdf} % Could crop PDF
-    \includegraphics[width=0.4\textwidth]{build/example.png}
+    \includegraphics[width=0.4\textwidth]{img/example.png}
     \caption{This is a image.}
     \label{fig::local_pred_model}
 \end{figure*}
