--- a/main.tex
+++ b/main.tex
@@ -135,7 +135,7 @@
 % Reference
 %==============================
 \bibliographystyle{vancouver}
-{\footnotesize \bibliography{citiation}}
+{\footnotesize \bibliography{citation}}
 %==============================
 
 \end{document} 
